reality checks